--- a/scss/theme.css
+++ b/scss/theme.css
@@ -12,29 +12,6 @@
   display: none !important;
 }
 
-.blink_fade {
-  -webkit-animation: blinker 0.8s linear infinite;
-          animation: blinker 0.8s linear infinite;
-}
-
-@-webkit-keyframes blinker {
-  10% {
-    opacity: 0;
-  }
-  40% {
-    opacity: 50;
-  }
-}
-
-@keyframes blinker {
-  10% {
-    opacity: 0;
-  }
-  40% {
-    opacity: 50;
-  }
-}
-
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -401,7 +378,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-weight: 300;
+  font-weight: 500;
   line-height: 1.2;
 }
 
@@ -586,8 +563,8 @@ pre code {
 
 .container {
   width: 100%;
-  padding-right: 40px;
-  padding-left: 40px;
+  padding-right: 15px;
+  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -618,8 +595,8 @@ pre code {
 
 .container-fluid {
   width: 100%;
-  padding-right: 40px;
-  padding-left: 40px;
+  padding-right: 15px;
+  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -630,8 +607,8 @@ pre code {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-right: -40px;
-  margin-left: -40px;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 
 .no-gutters {
@@ -653,8 +630,8 @@ pre code {
 .col-xl-auto {
   position: relative;
   width: 100%;
-  padding-right: 40px;
-  padding-left: 40px;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .col {
@@ -4848,11 +4825,11 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.75);
 }
 
 .navbar-dark .navbar-nav .nav-link.disabled {
@@ -4867,16 +4844,16 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-toggler {
-  color: rgba(255, 255, 255, 0.8);
-  border-color: transparent;
+  color: rgba(255, 255, 255, 0.5);
+  border-color: rgba(255, 255, 255, 0.1);
 }
 
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 .navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .navbar-dark .navbar-text a {
@@ -5021,7 +4998,7 @@ input[type="button"].btn-block {
 }
 
 .card-deck .card {
-  margin-bottom: 40px;
+  margin-bottom: 15px;
 }
 
 @media (min-width: 576px) {
@@ -5030,8 +5007,8 @@ input[type="button"].btn-block {
     -webkit-box-direction: normal;
         -ms-flex-flow: row wrap;
             flex-flow: row wrap;
-    margin-right: -40px;
-    margin-left: -40px;
+    margin-right: -15px;
+    margin-left: -15px;
   }
   .card-deck .card {
     display: -webkit-box;
@@ -5044,9 +5021,9 @@ input[type="button"].btn-block {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-right: 40px;
+    margin-right: 15px;
     margin-bottom: 0;
-    margin-left: 40px;
+    margin-left: 15px;
   }
 }
 
@@ -5061,7 +5038,7 @@ input[type="button"].btn-block {
 }
 
 .card-group > .card {
-  margin-bottom: 40px;
+  margin-bottom: 15px;
 }
 
 @media (min-width: 576px) {
