--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -3,9 +3,13 @@
 
 $font-size-base: 1rem;
 $font-family-sans-serif: "Quicksand", Arial, sans-serif;
-// $headings-font-weight: 300;
+$headings-font-weight: 300;
 
 $label-margin-bottom: 0.25rem;
+
+a {
+  text-decoration: none !important;
+}
 
 .cursor-pointer {
   cursor: pointer;
@@ -20,8 +24,8 @@ $label-margin-bottom: 0.25rem;
   display: none !important;
 }
 
-$primary: #00bbff;
-$secondary: #666666;
+$primary: #29a960;
+$secondary: #fecf5c;
 $info: #99cc33;
 $success: #33cc33;
 $warning: #ff9900;
