Cleaned up responsive column layout for filters and results

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -3,7 +3,7 @@
 
 $font-size-base: 1rem;
 $font-family-sans-serif: "Quicksand", Arial, sans-serif;
-$headings-font-weight: 300;
+// $headings-font-weight: 300;
 
 $label-margin-bottom: 0.25rem;
 
