--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -1,7 +1,8 @@
 // @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;600&family=Barlow:wght@300;400;700&display=swap");
 
-$font-size-base: 1rem;
+$font-size-base: 0.8rem;
 $font-family-sans-serif: "Quicksand", Arial, sans-serif;
 // $headings-font-weight: 300;
 
@@ -33,6 +34,15 @@ $danger: #cc3333;
 $dark: #333333;
 $light: #efefef;
 $white: #ffffff;
+
+a[aria-expanded="true"] > .expanded-indicator {
+  transform: rotate(315deg);
+  transition: transform 200ms ease;
+}
+a[aria-expanded="false"] > .expanded-indicator {
+  transform: rotate(360deg);
+  transition: transform 200ms ease;
+}
 
 // import all bootstrap variables (values from above will overwrite defaults)
 @import "../node_modules/bootstrap/scss/functions";
