Added index page and renamed details to critters

--- a/scss/theme.css
+++ b/scss/theme.css
@@ -54,7 +54,7 @@ a[aria-expanded="false"] > .expanded-indicator {
   --white: #ffffff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #29a960;
+  --primary: #53a04a;
   --secondary: #fecf5c;
   --success: #33cc33;
   --info: #99cc33;
@@ -190,13 +190,13 @@ sup {
 }
 
 a {
-  color: #29a960;
+  color: #53a04a;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #1a6b3d;
+  color: #386c32;
   text-decoration: underline;
 }
 
@@ -1755,23 +1755,23 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #c3e7d2;
+  background-color: #cfe4cc;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #90d2ac;
+  border-color: #a6cea1;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #b1e0c4;
+  background-color: #bfdbbb;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #b1e0c4;
+  background-color: #bfdbbb;
 }
 
 .table-secondary,
@@ -2072,10 +2072,10 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #ffffff;
-  border-color: #74dda1;
+  border-color: #9fd099;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2623,8 +2623,8 @@ textarea.form-control {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2638,38 +2638,38 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #29a960;
-  border-color: #29a960;
+  background-color: #53a04a;
+  border-color: #53a04a;
 }
 
 .btn-primary:hover {
   color: #ffffff;
-  background-color: #228a4f;
-  border-color: #1f8049;
+  background-color: #45863e;
+  border-color: #417d3a;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(73, 182, 120, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(73, 182, 120, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(109, 174, 101, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(109, 174, 101, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #ffffff;
-  background-color: #29a960;
-  border-color: #29a960;
+  background-color: #53a04a;
+  border-color: #53a04a;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #ffffff;
-  background-color: #1f8049;
-  border-color: #1d7643;
+  background-color: #417d3a;
+  border-color: #3c7436;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(73, 182, 120, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(73, 182, 120, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(109, 174, 101, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(109, 174, 101, 0.5);
 }
 
 .btn-secondary {
@@ -2925,37 +2925,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #29a960;
-  border-color: #29a960;
+  color: #53a04a;
+  border-color: #53a04a;
 }
 
 .btn-outline-primary:hover {
   color: #ffffff;
-  background-color: #29a960;
-  border-color: #29a960;
+  background-color: #53a04a;
+  border-color: #53a04a;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #29a960;
+  color: #53a04a;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #ffffff;
-  background-color: #29a960;
-  border-color: #29a960;
+  background-color: #53a04a;
+  border-color: #53a04a;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3198,12 +3198,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #29a960;
+  color: #53a04a;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #1a6b3d;
+  color: #386c32;
   text-decoration: underline;
 }
 
@@ -3502,7 +3502,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #ffffff;
   text-decoration: none;
-  background-color: #29a960;
+  background-color: #53a04a;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3890,23 +3890,23 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #ffffff;
-  border-color: #29a960;
-  background-color: #29a960;
+  border-color: #53a04a;
+  background-color: #53a04a;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #74dda1;
+  border-color: #9fd099;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #ffffff;
-  background-color: #9de7bd;
-  border-color: #9de7bd;
+  background-color: #c0e0bc;
+  border-color: #c0e0bc;
 }
 
 .custom-control-input:disabled ~ .custom-control-label {
@@ -3956,8 +3956,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #29a960;
-  background-color: #29a960;
+  border-color: #53a04a;
+  background-color: #53a04a;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3965,11 +3965,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(41, 169, 96, 0.5);
+  background-color: rgba(83, 160, 74, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(41, 169, 96, 0.5);
+  background-color: rgba(83, 160, 74, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3981,7 +3981,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(41, 169, 96, 0.5);
+  background-color: rgba(83, 160, 74, 0.5);
 }
 
 .custom-switch {
@@ -4022,7 +4022,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(41, 169, 96, 0.5);
+  background-color: rgba(83, 160, 74, 0.5);
 }
 
 .custom-select {
@@ -4045,10 +4045,10 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #74dda1;
+  border-color: #9fd099;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4105,9 +4105,9 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #74dda1;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
+  border-color: #9fd099;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
@@ -4170,16 +4170,16 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #ffffff, 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
-          box-shadow: 0 0 0 1px #ffffff, 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #ffffff, 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
+          box-shadow: 0 0 0 1px #ffffff, 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #ffffff, 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
+  box-shadow: 0 0 0 1px #ffffff, 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #ffffff, 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
+  box-shadow: 0 0 0 1px #ffffff, 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4190,7 +4190,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #29a960;
+  background-color: #53a04a;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4209,7 +4209,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #9de7bd;
+  background-color: #c0e0bc;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4225,7 +4225,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #29a960;
+  background-color: #53a04a;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4244,7 +4244,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #9de7bd;
+  background-color: #c0e0bc;
 }
 
 .custom-range::-moz-range-track {
@@ -4263,7 +4263,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #29a960;
+  background-color: #53a04a;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4281,7 +4281,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #9de7bd;
+  background-color: #c0e0bc;
 }
 
 .custom-range::-ms-track {
@@ -4413,7 +4413,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #ffffff;
-  background-color: #29a960;
+  background-color: #53a04a;
 }
 
 .nav-fill .nav-item {
@@ -5204,14 +5204,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #29a960;
+  color: #53a04a;
   background-color: #ffffff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #1a6b3d;
+  color: #386c32;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5220,8 +5220,8 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 2;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -5238,8 +5238,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #ffffff;
-  background-color: #29a960;
-  border-color: #29a960;
+  background-color: #53a04a;
+  border-color: #53a04a;
 }
 
 .page-item.disabled .page-link {
@@ -5326,18 +5326,18 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #ffffff;
-  background-color: #29a960;
+  background-color: #53a04a;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #ffffff;
-  background-color: #1f8049;
+  background-color: #417d3a;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(41, 169, 96, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(83, 160, 74, 0.5);
 }
 
 .badge-secondary {
@@ -5500,17 +5500,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #155832;
-  background-color: #d4eedf;
-  border-color: #c3e7d2;
+  color: #2b5326;
+  background-color: #ddecdb;
+  border-color: #cfe4cc;
 }
 
 .alert-primary hr {
-  border-top-color: #b1e0c4;
+  border-top-color: #bfdbbb;
 }
 
 .alert-primary .alert-link {
-  color: #0b2f1b;
+  color: #193016;
 }
 
 .alert-secondary {
@@ -5654,7 +5654,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #ffffff;
   text-align: center;
   white-space: nowrap;
-  background-color: #29a960;
+  background-color: #53a04a;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5757,8 +5757,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #ffffff;
-  background-color: #29a960;
-  border-color: #29a960;
+  background-color: #53a04a;
+  border-color: #53a04a;
 }
 
 .list-group-horizontal {
@@ -5902,19 +5902,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #155832;
-  background-color: #c3e7d2;
+  color: #2b5326;
+  background-color: #cfe4cc;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #155832;
-  background-color: #b1e0c4;
+  color: #2b5326;
+  background-color: #bfdbbb;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #ffffff;
-  background-color: #155832;
-  border-color: #155832;
+  background-color: #2b5326;
+  border-color: #2b5326;
 }
 
 .list-group-item-secondary {
@@ -6937,13 +6937,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #29a960 !important;
+  background-color: #53a04a !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #1f8049 !important;
+  background-color: #417d3a !important;
 }
 
 .bg-secondary {
@@ -7065,7 +7065,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #29a960 !important;
+  border-color: #53a04a !important;
 }
 
 .border-secondary {
@@ -10425,11 +10425,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #29a960 !important;
+  color: #53a04a !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #1a6b3d !important;
+  color: #386c32 !important;
 }
 
 .text-secondary {
