--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -25,7 +25,7 @@ a {
   display: none !important;
 }
 
-$primary: #29a960;
+$primary: #53a04a;
 $secondary: #fecf5c;
 $info: #99cc33;
 $success: #33cc33;
